2011-07-18  Jeremy Cribb <jcribb@email.unc.edu>
	* .csvignore:  added.  tells cvs to ignore .asv files.

2011-07-13  Jeremy Cribb <jcribb@email.unc.edu>
	* save_msdfile.m: added.  saves mean squared displacement calculations to matlab structure defined in "video_msd.m"
	* save_gserfile.m:  added.  saves generalized stokes-einstein relation calculations to matlab structure defined in 've.m'	

2011-07-01  Jeremy Cribb <jcribb@email.unc.edu>
	* sucrose_viscosity.m: now reports a viscosity of "NaN" for solution concentrations that exceed solubility limites for sucrose.
	
2011-04-13  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_mucus_rheo_run.m: removed.  moved to 3dfmAnalysis/panoptes.

2011-01-24  Jeremy Cribb <jcribb@email.unc.edu>
	* video_msd.m: fixed typo where the sample counts were deleted from msd structure.

2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_mucus_rheo_run.m: added.  panoptes rheology analysis code in its early stages.  specific for mucus samples.  This may be moved or refactored later. 

2010-09-07  Jeremy Cribb <jcribb@email.unc.edu>
	* direct_moduli.m: added.  Code from 2009 paper, Phys Rev E, Waigh, "Direct Conversion of rheological compliance measurements into storage and loss moduli"

2009-10-15  Jeremy Cribb <jcribb@email.unc.edu>
	* sim_newt_fluid_evt.m: added.  creates an evt file from brownian simulations.

2009-06-16  Stephen Norris <srnorrisunc@gmail.com>
	* relaxation_time.m: removed offset such that minimum of dependent variable is zero.

2009-04-29  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: initial guesses are now smarter.
	* relaxtime_fun.m: same.
	
2009-02-26  Jeremy Cribb <jcribb@email.unc.edu>
	* added dmbr folder
	* sucrose_viscosity.m: added solution density as an output.
	
2008-11-20  Kris Ford <krisford@email.unc.edu>
	* get_video_viscs.m: modified documentation to better match Mathworks convention
	* get_viscs.m: same
	* get_viscs_txyz.m: same
	* get_vrpn_viscs.m: same
	* jeffrey_model_step.m: same