@@ -1,3 +1,6 @@
+2011-08-09  Jeremy Cribb <jcribb@email.unc.edu>
+	* save_msdfile.m:  added switch for ignoring squared-displacements, if desired.
+
 2011-07-18  Jeremy Cribb <jcribb@email.unc.edu>
 	* .csvignore:  added.  tells cvs to ignore .asv files.
 
